deploy/kubernetes/deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-vote-app
  namespace: app
spec:
  selector:
    app: web-vote-app
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: results-app
  namespace: app
spec:
  selector:
    app: results-app
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-vote-app
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-vote-app
  template:
    metadata:
      labels:
        app: web-vote-app
    spec:
      imagePullSecrets:
        - name: lp-registry-secret
      containers:
        - name: web-vote-app
          image: asia-southeast2-docker.pkg.dev/leftprazz/lp-registry/web-vote-app:latest
          ports:
            - containerPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-worker
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote-worker
  template:
    metadata:
      labels:
        app: vote-worker
    spec:
      imagePullSecrets:
        - name: lp-registry-secret
      containers:
        - name: vote-worker
          image: asia-southeast2-docker.pkg.dev/leftprazz/lp-registry/vote-worker:latest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: results-app
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: results-app
  template:
    metadata:
      labels:
        app: results-app
    spec:
      imagePullSecrets:
        - name: lp-registry-secret
      containers:
        - name: results-app
          image: asia-southeast2-docker.pkg.dev/leftprazz/lp-registry/results-app:latest
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: redis01
  namespace: app
spec:
  selector:
    app: redis01
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: store
  namespace: app
spec:
  selector:
    app: store
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-vote-app-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "*.leftprazz.com"
      secretName: leftprazz-cert
  rules:
    - host: k8s-vote.leftprazz.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-vote-app
                port:
                  number: 8081
---
kind: Ingress
metadata:
  name: results-app-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "*.leftprazz.com"
      secretName: leftprazz-cert
  rules:
    - host: k8s-results.leftprazz.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: results-app
                port:
                  number: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis01
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis01
  template:
    metadata:
      labels:
        app: redis01
    spec:
      containers:
        - name: redis01
          image: redis:3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: store
  template:
    metadata:
      labels:
        app: store
    spec:
      containers:
        - name: store
          image: postgres:9.5
